--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,23 +1,28 @@
 * {
     display:flex;
     flex-direction: column;
-    background-color:whitesmoke;
+    background-color:teal;
     text-align: center;
     font-family: 'Roboto', sans-serif;
-    max-width: 100vw;
-}
-.main-nav {
-    margin-left:  -40px;
 }
 
-a, a:hover, a:focus, a:active {
+a {
     text-decoration: none;
-    color: inherit;
-    background-color: white;
+    color:inherit;
+    background-color: inherit;
 }
+
+a:hover {
+    transform: scale(1.5);
+    border: 2px solid blue;
+    color: blue;
+}
+
 
 h1 {
     text-align: center;
+    font-size: 26px;
+    font-weight: bold;
 }
 
 h2 {
@@ -26,11 +31,13 @@ h2 {
     font-size: 18px;
     margin-top: 2em;
     margin-bottom: 2em;
+    font-weight: bold;
 }
 
 h3 {
     font-size: 16px;
     background-color: inherit;
+    font-weight: bold;
 }
 
 .divider {
@@ -39,6 +46,7 @@ h3 {
 
 ul {
     list-style-type: none;
+    padding-inline-start: 0px;
 }
 li {
     display: block;
@@ -49,15 +57,17 @@ li {
     font-weight: bold;
     text-align: center;
     text-transform: uppercase;
+    justify-content: center;
 }
 
 .pic {
-    max-width: 350px;
+    width: 350px;
     align-self: center;
+    background-color: inherit;
 }
 
 .me {
-    max-width: 250px;
+    width: 250px;
     margin-top: 25px;
     margin-bottom: 25px;
     align-self: center;
@@ -78,15 +88,28 @@ li {
 }
 
 footer {
-    display: flexbox;
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 .btt {
-    background-color: whitesmoke;
+    background-color: inherit;
     margin-top: auto;
     margin-bottom: auto;
     font-size: 16px;
+    order: 1;
+}
+strong,
+.email,
+.phone {
+    display: flexbox;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+strong {
+    padding-left: 10px;
 }
 
 .element {
@@ -97,17 +120,110 @@ p {
     background-color: inherit;
 }
 
-@media screen (min-width: 769px) {
-    .pic {
-        width: 500px;
+.email {
+    margin-bottom: 50px;
+}
+.bottom-nav {
+    display: none;
+}
 
+.js {
+    height: 300px;
+    width: 300px;
+    align-self: center;
+    background-color: inherit;
+}
+
+@media screen and (min-width: 768px) {
+    .pic {
+        width: 300px;
+    }
+    p {
+        max-width: 300px;
+        align-self: center;
+    }
+    #portfolio, 
+    #skills {
+        display: block;
+        margin: 35px 500px;
+    }
+    .main-nav {
+        display: flex;
+        flex-direction: row;
+        background-color: inherit;
+        justify-content: center;
+    }
+    .main-nav:second-child {
+        padding: 10px 40px;
+    }
+    li {
+        background-color: inherit;
+    }
+    a {
+        background-color: inherit;
+    }
+    .flex {
+        display: flex;
+        flex-direction: row-reverse;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .about {
+        text-align: left;
+        max-width: 400px;
+    }
+    .btt {
+        display: none;
+    }
+    .bottom-nav {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        font-size: 16px;
+        padding: 10px 10px;
+    }
+    .talk {
+        max-width: 450px;
+    }
+    .student {
+        margin-top: 39px;
+    }
+    .me {
+        padding: 10px 10px;
     }
 }
 
-@media screen (max-width: 1024px) {
+@media screen and (min-width: 1024px) {
     .flex {
         max-width 450px;
     }
-
-
+    #portfolio,
+    #skills {
+        display: block;
+        margin: 35px 500px;
+    }
+    header {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    * {
+        margin-left: 8px;
+        margin-right: 8px;
+    }
+    .holder {
+        max-width: 1200px;
+        align-self: center;
+    }
+    .flex {
+        justify-content: space-between;
+        align-items:flex-start;
+    }
+    .me {
+        width: 450px;
+    }
+    .about {
+        margin-bottom: 210px;
+    }
 }
